--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "@types/react-native-snap-carousel": "^3.8.3",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components-react-native": "^5.1.1",
+    "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
