--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-viewing": "^0.2.0",
