--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-lightbox": "^0.8.1",
     "react-native-pager-view": "^5.1.10",
+    "react-native-permissions": "^3.0.5",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
