--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^3",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -33,7 +34,7 @@
     "react-native-pager-view": "^5.1.10",
     "react-native-permissions": "^3.0.5",
     "react-native-progress": "^4.1.2",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-snap-carousel": "^3.9.1",
